syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.william";
option java_outer_classname = "KeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zupacademy.william;

service KeymanagerGrpcService {
  rpc registry (KeymanagerGrpcRequest) returns (KeymanagerGrpcReply) {}
}

message CorpoDeErro {
  repeated ErrorDetails errors = 1;
}

message ErrorDetails {
  string campo = 1;
  string erro = 2;
}

enum KeyType {
  CHAVE_INVALIDA = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum AccountType {
  CONTA_INVALIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message KeymanagerGrpcRequest {
  string idCliente = 1;
  KeyType tipoChave = 2;
  string valorChave = 3;
  AccountType tipoConta = 4;
}

message KeymanagerGrpcReply {
  string idPix = 1;
}